add manage control 'graph' [Frontend]

--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/mgc01/mgc01-1/mgc01-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/mgc01/mgc01-1/mgc01-1.component.html
@@ -1,42 +1,1 @@
-<div class="ui grid">
-  <div class="sixteen wide column">
-
-
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>Dash Bord แสดงข้อมูลการตรวจ
-      </span>
-    </div>
-
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="two wide field ">
-            <label>เรื่อง :
-            </label>
-          </div>
-          <div class="three wide field ">
-            <select class="ui dropdown">
-              <option value="">Gender</option>
-              <option value="1">Male</option>
-              <option value="0">Female</option>
-            </select>
-          </div>
-        </div>
-        <div class="inline fields">
-          <div class="two wide field ">
-            <label>ปีงบประมาณ :
-            </label>
-          </div>
-
-          <div class="ui calendar" id="example4">
-            <div class="ui input left icon">
-              <i class="calendar icon"></i>
-              <input type="text" placeholder="Date/Time">
-            </div>
-          </div>
-
-          <br>
-          <br>
-
-        </div>
-      </div>
+<canvas id="myChart" width="700" height="400"></canvas>
