edited detail manage control page

--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="sixteen wide column">
       <div class="ui blue inverted segment center aligned">
-        <h4>แดชบอร์ดแสดงข้อมูลการตรวจ <span class="red">{{topic}}</span></h4>
+        <h4>แสดงข้อมูลการตรวจ <span class="red">{{topic}}</span></h4>
       </div>
     </div>
   </div>
@@ -75,9 +75,9 @@
       <div class="ui segment">
         <div class="wide" id="context">
           <div class="ui pointing secondary menu">
-            <a class="item active" data-tab="first">Line Graph</a>
-            <a class="item" data-tab="second">Bar Graph</a>
-            <a class="item" data-tab="third">Pie Graph</a>
+            <a class="item active" data-tab="first">กราฟเส้น</a>
+            <a class="item" data-tab="second">กราฟแท่ง</a>
+            <a class="item" data-tab="third">กราฟวงกลม</a>
           </div>
           <div class="ui tab segment center aligned active" data-tab="first">
             <app-mgc01-1></app-mgc01-1>
