--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -153,10 +153,10 @@
             <div class="ui dropdown item" routerLinkActive="active">
                 <i class="dropdown icon"></i> รายงานผลการตรวจ
                 <div class="menu">
-                    <a class="item" [routerLink]="[]" routerLinkActive="active">รายงานผลการตรวจสอบภาษี</a>
-                    <a class="item" [routerLink]="[]" routerLinkActive="active">รายงานผลการตรวจสอบภายใน </a>                    
-                    <a class="item" [routerLink]="[]" routerLinkActive="active">รายงานผลการตรวจส่งออก  </a>
-                    <a class="item" [routerLink]="[]" routerLinkActive="active">รายงานผลการตรวจปฏิบัติการ</a>
+                    <a class="item" [routerLink]="['/report-tax']" routerLinkActive="active">รายงานผลการตรวจสอบภาษี</a>
+                    <a class="item" [routerLink]="['/report-int']" routerLinkActive="active">รายงานผลการตรวจสอบภายใน </a>                    
+                    <a class="item" [routerLink]="['/report-out']" routerLinkActive="active">รายงานผลการตรวจส่งออก  </a>
+                    <a class="item" [routerLink]="['/report-opt']" routerLinkActive="active">รายงานผลการตรวจปฏิบัติการ</a>
 
                 </div>
             </div>
