--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -126,4 +126,52 @@
             </div>
         </div>
     </div>
+    <div class="sixteen wide column">
+        <div class="ui top attached header">Cards</div>
+        <div class="ui attached segment">
+            <div class="ui cards">
+                <div class="card">
+                    <div class="content">
+                        <img class="right floated mini ui image" src="http://placehold.it/64x64">
+                        <div class="header">
+                            Elliot Fu
+                        </div>
+                        <div class="meta">
+                            Friends of Veronika
+                        </div>
+                        <div class="description">
+                            Elliot requested permission to view your contact details
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <div class="ui two buttons">
+                            <div class="ui basic green button">Approve</div>
+                            <div class="ui basic red button">Decline</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="content">
+                        <img class="right floated mini ui image" src="http://placehold.it/64x64">
+                        <div class="header">
+                            Jenny Hess
+                        </div>
+                        <div class="meta">
+                            New Member
+                        </div>
+                        <div class="description">
+                            Jenny wants to add you to the group
+                            <b>best friends</b>
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <div class="ui two buttons">
+                            <div class="ui basic green button">Approve</div>
+                            <div class="ui basic red button">Decline</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
