--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
@@ -40,31 +40,31 @@
         <div class="ui list">
           <div class="item">
             <div class="ui checkbox">
-              <input type="checkbox" tabindex="2" class="hidden">
+              <input type="checkbox" tabindex="2" class="hidden" checked>
               <label>จำนวนรายตามแผนการตรวจสอบภาษี</label>
             </div>
           </div>
           <div class="item">
             <div class="ui checkbox">
-              <input type="checkbox" tabindex="2" class="hidden">
+              <input type="checkbox" tabindex="2" class="hidden" checked>
               <label>จำนวนรายตามแผนการตรวจสอบภาษี</label>
             </div>
           </div>
           <div class="item">
             <div class="ui checkbox">
-              <input type="checkbox" tabindex="3" class="hidden">
+              <input type="checkbox" tabindex="3" class="hidden" checked>
               <label>จำนวนรายที่กำลังตรวจสอบภาษี</label>
             </div>
           </div>
           <div class="item">
             <div class="ui checkbox">
-              <input type="checkbox" tabindex="4" class="hidden">
+              <input type="checkbox" tabindex="4" class="hidden" checked>
               <label>จำนวนรายที่ตรวจสอบเสร็จสิ้น</label>
             </div>
           </div>
           <div class="item">
             <div class="ui checkbox">
-              <input type="checkbox" tabindex="5" class="hidden">
+              <input type="checkbox" tabindex="5" class="hidden" checked>
               <label>จำนวนรายทั้งหมด</label>
             </div>
           </div>
@@ -75,9 +75,9 @@
       <div class="ui segment">
         <div class="wide" id="context">
           <div class="ui pointing secondary menu">
-            <a class="item active" data-tab="first">กราฟเส้น</a>
-            <a class="item" data-tab="second">กราฟแท่ง</a>
-            <a class="item" data-tab="third">กราฟวงกลม</a>
+            <a class="item active" data-tab="first">Line graph</a>
+            <a class="item" data-tab="second">Bar graph </a>
+            <a class="item" data-tab="third">Pie chart</a>
           </div>
           <div class="ui tab segment center aligned active" data-tab="first">
             <app-mgc01-1></app-mgc01-1>
