--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/reports/report-tax/report-tax.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/reports/report-tax/report-tax.component.html
@@ -1,17 +1,88 @@
-<div class="ui grid">
-  <div class="row">
-    <div class="ui fourteen column certered grid">
-      <div class="ui raised segments">
-        <div class="ui segment">
-          <p>Top</p>
+<div class="ui center aligned grid">
+  <div class="twelve wide column">
+
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>รายงานผลการตรวจภาษี</span>
+    </div>
+
+    <form class="ui form center aligned" ngNativeValidate>
+      <div class="ui attached segment">
+        <div class="ui center aligned grid">
+          <div class="twelve wide column">
+            <div class="field">
+              <label style="text-align: left;font-size: 15px;margin-bottom: 15px;">ค้นหารายงานผลการตรวจ
+                <br>
+              </label>
+              <div class="inline fields">
+                <div class="three wide field">
+                  <label>ปีงบประมาณ : </label>
+                </div>
+                <div class="five wide field">
+                  <div class="ui calendar" id="year" style="width: 100%">
+                    <div class="ui input left icon">
+                      <i class="calendar icon"></i>
+                      <input type="text" [(ngModel)]="year" placeholder="ปี" autocomplete="off" [attr.readonly]="null" id="year" name="year" [attr.required]="true">
+                    </div>
+                  </div>
+                </div>
+                <div class="three wide field">
+                  <label>พิกัดสินค้า : </label>
+                </div>
+                <div class="five wide field">
+                  <select name="target" style="width: 100%" class="ui fluid search dropdown">
+                    <option value="">เลือกพิกัดสิน</option>
+                    <option value="ทั้งหมด">ทั้งหมด</option>
+                    <option value="สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน</option>
+                    <option value="สินค้าเครื่องดื่ม">สินค้าเครื่องดื่ม</option>
+                    <option value="สินค้าเครื่องไฟฟ้า">สินค้าเครื่องไฟฟ้า</option>
+                    <option value="สินค้าแบตเตอรี่">สินค้าแบตเตอรี่</option>
+                    <option value="สินค้าแก้วและเครื่องแก้ว">สินค้าแก้วและเครื่องแก้ว</option>
+                    <option value="สินค้ารถยนต์">สินค้ารถยนต์</option>
+                    <option value="สินค้ารถจักรยานยนต์">สินค้ารถจักรยานยนต์</option>
+                    <option value="สินค้าเรือ">สินค้าเรือ</option>
+                    <option value="สินค้าผลิตภัณฑ์เครื่องหอมและเครื่องสำอาง">สินค้าผลิตภัณฑ์เครื่องหอมและเครื่องสำอาง</option>
+                    <option value="สินค้าพรมและสิ่งทอปูพื้นอื่นๆ">สินค้าพรมและสิ่งทอปูพื้นอื่นๆ</option>
+                    <option value="สินค้าหินอ่อนและหินแกรนิต">สินค้าหินอ่อนและหินแกรนิต</option>
+                    <option value="สินค้าสารทำลายชั้นบรรยากาศ">สินค้าสารทำลายชั้นบรรยากาศ</option>
+                    <option value="สินค้าไพ่">สินค้าไพ่</option>
+                    <option value="กิจการบันเทิงหรือหย่อนใจ">กิจการบันเทิงหรือหย่อนใจ</option>
+                    <option value="กิจการเสี่ยงโชค">กิจการเสี่ยงโชค</option>
+                    <option value="กิจการที่มีผลกระทต่อสิ่งแวดล้อม">กิจการที่มีผลกระทต่อสิ่งแวดล้อม</option>
+                    <option value="กิจการที่ได้รับอนุญาตหรือสัมปทานจากรัฐ">กิจการที่ได้รับอนุญาตหรือสัมปทานจากรัฐ</option>
+                  </select>
+                </div>
+              </div>
+              <div class="inline fields">
+                <div class="sixteen wide field">
+                  <div class="ui center aligned grid" style="width: 100%">
+                    <div class="sixteen wide column">
+                      <button class="ui mini green button">ค้นหารายงาน</button>
+                      <button class="ui mini red button">ยกเลิก</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="ui segment">
-          <p>Middle</p>
-        </div>
-        <div class="ui segment">
-          <p>Bottom</p>
+      </div>
+    </form>
+
+  </div>
+
+  <div class="twelve wide column">
+
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>รายงานผลการตรวจภาษี ประจำปีงบประมาณ {{year}}</span>
+    </div>
+
+
+    <div class="ui attached segment">
+      <div class="ui center aligned grid">
+        <div class="twelve wide column">
+          
         </div>
       </div>
     </div>
+
   </div>
-</div>
