--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/mgc02/mgc02-3/mgc02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/mgc02/mgc02-3/mgc02-3.component.html
@@ -1,5 +1,5 @@
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>รายงานผลการออกตรวจเรื่อง ระบบการตรวจภาษี ประจำปีงบประมาณ 'carlender'</span>
+    <span>รายงานผลการออกตรวจเรื่อง ระบบการตรวจภาษี ประจำปีงบประมาณ {{ year }}</span>
 </div>
 
 <div class="ui attached  segment">
