--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/reports/report-tax/report-tax.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/reports/report-tax/report-tax.component.html
@@ -102,7 +102,7 @@
                 <td>ภาค 4</td>
                 <td>-</td>
                 <td>น้ำมัน</td>
-                <td>2559</td>
+                <td>{{year}}</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -111,7 +111,7 @@
                 <td>ภาค 3</td>
                 <td>-</td>
                 <td>น้ำมัน</td>
-                <td>2559</td>
+                <td>{{year}}</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -120,7 +120,7 @@
                 <td>ภาค 4</td>
                 <td>-</td>
                 <td>น้ำดื่ม</td>
-                <td>2559</td>
+                <td>{{year}}</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -129,7 +129,7 @@
                 <td>ภาค 4</td>
                 <td>-</td>
                 <td>รถยนต์</td>
-                <td>2559</td>
+                <td>{{year}}</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -138,7 +138,7 @@
                 <td>ภาค 10</td>
                 <td>กทม 1</td>
                 <td>น้ำดื่ม</td>
-                <td>2559</td>
+                <td>{{year}}</td>
                 <td>-</td>
               </tr>
             </tbody>
