--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/reports/report-opt/report-opt.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/reports/report-opt/report-opt.component.html
@@ -104,7 +104,7 @@
                 <td>ภาค 4</td>
                 <td>-</td>
                 <td>น้ำมัน</td>
-                <td>2559</td>
+                <td>{{year}}</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -113,7 +113,7 @@
                 <td>ภาค 3</td>
                 <td>-</td>
                 <td>น้ำมัน</td>
-                <td>2559</td>
+                <td>{{year}}</td>
                 <td>-</td>
               </tr>
               <tr>
