--- a/workspace/ims-client/src/app/buckwaframework/project/pages/login/login.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/login/login.html
@@ -1,36 +1,53 @@
-<div class="ui middle aligned center aligned grid">
-    <div class="column">
-        <h2 class="ui teal image header">
-            <img src="assets/images/logo.png" class="image">
-            <div class="content">
-                Log-in to your account
-            </div>
-        </h2>
-
-        <div class="ui warning message" *ngIf="loginInvalid" >
+<div class="ui middle aligned center aligned grid" style="margin-top: 5px;">
+    <div class="column" style="margin-top: 80px;">
+        <div class="ui warning message" *ngIf="loginInvalid">
             <i class="close icon" (click)="loginInvalid=false;"></i>
             <div class="header">
-              Invalid Username or Password
+                Invalid Username or Password
             </div>
         </div>
 
-        <form  [formGroup]="loginForm" class="ui large form" [ngClass]="ngLoading" >
+        <form [formGroup]="loginForm" class="ui large form" [ngClass]="ngLoading">
             <div class="ui stacked segment">
-                <div class="field">
-                    <div class="ui left icon input">
-                        <i class="user icon"></i>
-                        <input type="text" formControlName="username" placeholder="Username">
+                <img src="assets/images/logo.png" style="width: 100px;" class="image">
+
+                <div class="inline fields">
+                    <div class="four wide field">
+                        <label>ชื่อผู้ใช้ระบบ</label>
+                    </div>
+                    <div class="twelve wide field">
+                        <div class="ui left icon input">
+                            <i class="user icon"></i>
+                            <input type="text" formControlName="username" placeholder="Username">
+                        </div>
                     </div>
                 </div>
-                <div class="field">
-                    <div class="ui left icon input">
-                        <i class="lock icon"></i>
-                        <input type="password" formControlName="password" placeholder="Password" (keyup)="onKey($event)" >
+
+                <div class="inline fields">
+                    <div class="four wide field">
+                        <label>รหัสผ่าน</label>
+                    </div>
+                    <div class="twelve wide field">
+                        <div class="ui left icon input">
+                            <i class="lock icon"></i>
+                            <input type="password" formControlName="password" placeholder="Password" (keyup)="onKey($event)">
+                        </div>
                     </div>
                 </div>
-                <div class="ui fluid large teal submit button" (click)="login()">Login</div>
+
+                <div class="inline fields">
+                    <div class="four wide field">
+                        &nbsp;
+                    </div>
+                    <div class="twelve wide field">
+                        <div class="ui fluid large teal submit button" (click)="login()">เข้าสู่ระบบ</div>
+                    </div>
+                </div>
+
             </div>
         </form>
-        
     </div>
+</div>
+<div class="ui middle aligned center aligned grid">
+    <div style="margin-top: 70px;"><img src="assets/images/uatucm.png" class="image" style="width: 350px"></div>
 </div>
